.old/etc/ufw/before.rules
#
# rules.before
#
# Rules that should be run before the ufw command line added rules. Custom
# rules should be added to one of these chains:
#   ufw-before-input
#   ufw-before-output
#   ufw-before-forward
#
#

# START OPENVPN RULES
# NAT table rules
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
# Portforwarding für PS4 NAT Type 2
-A PREROUTING -i eth0 -p tcp -d 109.230.195.109 --dport 465 -j DNAT --to-destination 192.168.33.21
-A PREROUTING -i eth0 -p tcp -d 109.230.195.109 --dport 983 -j DNAT --to-destination 192.168.33.21
-A PREROUTING -i eth0 -p tcp -d 109.230.195.109 --dport 1935 -j DNAT --to-destination 192.168.33.21
-A PREROUTING -i eth0 -p tcp -d 109.230.195.109 --dport 3478:3480 -j DNAT --to-destination 192.168.33.21
-A PREROUTING -i eth0 -p tcp -d 109.230.195.109 --dport 5223 -j DNAT --to-destination 192.168.33.21
-A PREROUTING -i eth0 -p tcp -d 109.230.195.109 --dport 10070:10080 -j DNAT --to-destination 192.168.33.21
-A PREROUTING -i eth0 -p udp -d 109.230.195.109 --dport 3478:3479 -j DNAT --to-destination 192.168.33.21
-A PREROUTING -i eth0 -p udp -d 109.230.195.109 --dport 3658 -j DNAT --to-destination 192.168.33.21
-A PREROUTING -i eth0 -p udp -d 109.230.195.109 --dport 9304:9308 -j DNAT --to-destination 192.168.33.21
-A PREROUTING -i eth0 -p udp -d 109.230.195.109 --dport 10070 -j DNAT --to-destination 192.168.33.21
# NAT für OpenVPN
-A POSTROUTING -s 10.8.0.0/8 -o eth0 -j MASQUERADE
# NAT für IPsec / StrongSwan
-A POSTROUTING -s 192.168.0.0/16 -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.0.0/16 -o eth0 -m policy --dir out --pol ipsec -j ACCEPT
COMMIT
# END OPENVPN RULES
# Don't delete these required lines, otherwise there will be errors
*filter
:ufw-before-input - [0:0]
:ufw-before-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-not-local - [0:0]
# End required lines

# allow all on loopback
-A ufw-before-input -i lo -j ACCEPT
-A ufw-before-output -o lo -j ACCEPT

# SSH
-A ufw-before-input -p tcp --dport 22222 -j ACCEPT

# Allow DNS from 217.7.144.224/29
-A ufw-before-input -p udp --dport 53 -s 217.7.144.224/29 -j ACCEPT
-A ufw-before-input -p tcp --dport 53 -s 217.7.144.224/29 -j ACCEPT

# Deny all other DNS requests
-A ufw-before-input -p udp --dport 53 -j DROP
-A ufw-before-input -p tcp --dport 53 -j DROP

# quickly process packets for which we already have a connection
-A ufw-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# drop INVALID packets (logs these in loglevel medium and higher)
-A ufw-before-input -m conntrack --ctstate INVALID -j ufw-logging-deny
-A ufw-before-input -m conntrack --ctstate INVALID -j DROP

# ok icmp codes for INPUT
-A ufw-before-input -p icmp --icmp-type destination-unreachable -j ACCEPT
-A ufw-before-input -p icmp --icmp-type source-quench -j ACCEPT
-A ufw-before-input -p icmp --icmp-type time-exceeded -j ACCEPT
-A ufw-before-input -p icmp --icmp-type parameter-problem -j ACCEPT
-A ufw-before-input -p icmp --icmp-type echo-request -j DROP
-A ufw-before-input -p icmp --icmp-type echo-reply -j DROP

# ok icmp code for FORWARD
-A ufw-before-forward -p icmp --icmp-type destination-unreachable -j ACCEPT
-A ufw-before-forward -p icmp --icmp-type source-quench -j ACCEPT
-A ufw-before-forward -p icmp --icmp-type time-exceeded -j ACCEPT
-A ufw-before-forward -p icmp --icmp-type parameter-problem -j ACCEPT
-A ufw-before-forward -p icmp --icmp-type echo-request -j ACCEPT

# allow dhcp client to work
-A ufw-before-input -p udp --sport 67 --dport 68 -j ACCEPT

#
# ufw-not-local
#
-A ufw-before-input -j ufw-not-local

# if LOCAL, RETURN
-A ufw-not-local -m addrtype --dst-type LOCAL -j RETURN

# if MULTICAST, RETURN
-A ufw-not-local -m addrtype --dst-type MULTICAST -j RETURN

# if BROADCAST, RETURN
-A ufw-not-local -m addrtype --dst-type BROADCAST -j RETURN

# all other non-local packets are dropped
-A ufw-not-local -m limit --limit 3/min --limit-burst 10 -j ufw-logging-deny
-A ufw-not-local -j DROP

# allow MULTICAST mDNS for service discovery (be sure the MULTICAST line above
# is uncommented)
-A ufw-before-input -p udp -d 224.0.0.251 --dport 5353 -j ACCEPT

# allow MULTICAST UPnP for service discovery (be sure the MULTICAST line above
# is uncommented)
-A ufw-before-input -p udp -d 239.255.255.250 --dport 1900 -j ACCEPT

# Blocked IPs
#-A ufw-before-input -s 192.145.99.0/24 -j DROP

# don't delete the 'COMMIT' line or these rules won't be processed
COMMIT
